[tool.poetry]
name = "knappen"
version = "0.1.0"
description = ""
authors = ["Dennis Krone"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^3.0.0"
Flask-SocketIO = "^5.3.6"
gunicorn = "^21.2.0"
eventlet = "^0.33.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
